// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reference rooms > L-shaped room 1`] = `
{
  "byLayer": {
    "clip": 145,
    "furring": 19,
    "hanger": 65,
    "tsr": 10,
    "wall_angle": 6,
  },
  "issues": [],
  "members": 245,
  "setout": [
    {
      "degrees": 90,
      "origin": {
        "x": 4000,
        "y": 4500,
      },
      "reason": "parallel to the longest wall (9000mm, 90 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 427.778,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1087.5,
      },
    },
  ],
  "totalCutLength": 261145,
}
`;

exports[`reference rooms > L-shaped room skewed 7 degrees with two columns 1`] = `
{
  "byLayer": {
    "clip": 150,
    "furring": 23,
    "hanger": 65,
    "tsr": 11,
    "wall_angle": 8,
  },
  "issues": [
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning OPENING_EDGE_UNSUPPORTED",
  ],
  "members": 257,
  "setout": [
    {
      "degrees": 97.001,
      "origin": {
        "x": 3421.5,
        "y": 4710,
      },
      "reason": "parallel to the longest wall (9000mm, 97.001 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 427.787,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1087.52,
      },
    },
  ],
  "totalCutLength": 269202,
}
`;

exports[`reference rooms > exposed T-bar grid 1`] = `
{
  "byLayer": {
    "cross_tee_1200": 30,
    "hanger": 24,
    "main_tee": 4,
    "perimeter_angle": 4,
  },
  "issues": [
    "warning EDGE_MARGIN_EXCEEDED",
  ],
  "members": 62,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "cross_tee_1200": {
        "governedBy": "layers.cross_tee_1200.module",
        "spacing": 1200,
      },
      "main_tee": {
        "governedBy": "layers.main_tee.module",
        "spacing": 1200,
      },
    },
  ],
  "totalCutLength": 83840,
}
`;

exports[`reference rooms > plain 6x4 room 1`] = `
{
  "byLayer": {
    "clip": 60,
    "furring": 10,
    "hanger": 30,
    "tsr": 6,
    "wall_angle": 4,
  },
  "issues": [],
  "members": 110,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 411.111,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1140,
      },
    },
  ],
  "totalCutLength": 122990,
}
`;

exports[`reference rooms > purlins above at 1500 centres 1`] = `
{
  "byLayer": {
    "bridging": 12,
    "clip": 60,
    "furring": 10,
    "hanger": 30,
    "tsr": 6,
    "wall_angle": 4,
  },
  "issues": [
    "info BRIDGING_ADDED",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
    "info HANGER_NEEDS_BRIDGING",
  ],
  "members": 122,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 411.111,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1140,
      },
    },
  ],
  "totalCutLength": 146990,
}
`;

exports[`reference rooms > raked 1:20 1`] = `
{
  "byLayer": {
    "clip": 60,
    "furring": 10,
    "hanger": 30,
    "tsr": 6,
    "wall_angle": 4,
  },
  "issues": [],
  "members": 110,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 411.111,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1140,
      },
    },
  ],
  "totalCutLength": 118580,
}
`;

exports[`reference rooms > services: 14 downlights and 3 diffusers 1`] = `
{
  "byLayer": {
    "clip": 68,
    "furring": 24,
    "hanger": 32,
    "tsr": 8,
    "wall_angle": 4,
  },
  "issues": [
    "info EXTRA_BAYS_ADDED",
    "info SETOUT_NUDGED",
  ],
  "members": 136,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 344.545,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1140,
      },
    },
  ],
  "totalCutLength": 137258,
}
`;
